--- a/nginx-cloudflare.conf
+++ b/nginx-cloudflare.conf
@@ -17,7 +17,7 @@ http {
     proxy_cache_path /var/cache/nginx levels=1:2 keys_zone=hls_cache:10m max_size=500m inactive=10m use_temp_path=off;
 
     # Force IPv4 only DNS resolution
-    resolver 1.1.1.1 ipv6=off;
+    resolver 1.1.1.1 ipv6=off valid=300s;
     resolver_timeout 5s;
 
     # HTTP only - Cloudflare Tunnel handles SSL
@@ -29,12 +29,10 @@ http {
 
         add_header Access-Control-Allow-Origin *;
 
-        # Force variable to trigger resolver (which has ipv6=off)
-        set $rtve_backend "rtvelivestream.rtve.es";
-
         # Proxy the playlist, rewriting its TS URLs
         location /rtve/ {
-            proxy_pass             https://$rtve_backend/rtvesec/;
+            set $backend "rtvelivestream.rtve.es";
+            proxy_pass             https://$backend/rtvesec/$is_args$args;
             proxy_ssl_server_name  on;
             proxy_ssl_name         rtvelivestream.rtve.es;
             proxy_set_header       Host rtvelivestream.rtve.es;
@@ -54,7 +52,8 @@ http {
 
         # Proxy the TS segments themselves (with caching)
         location /rtvesec/ {
-            proxy_pass             https://$rtve_backend;
+            set $backend "rtvelivestream.rtve.es";
+            proxy_pass             https://$backend$request_uri;
             proxy_ssl_server_name  on;
             proxy_ssl_name         rtvelivestream.rtve.es;
             proxy_set_header       Host rtvelivestream.rtve.es;
@@ -81,7 +80,8 @@ http {
         }
 
         location /eventual/ {
-            proxy_pass             https://$rtve_backend/eventual/;
+            set $backend "rtvelivestream.rtve.es";
+            proxy_pass             https://$backend$request_uri;
             proxy_ssl_server_name  on;
             proxy_ssl_name         rtvelivestream.rtve.es;
             proxy_set_header       Host rtvelivestream.rtve.es;
